--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
 body{
     background-color: #24262c;
     font-family: 'Courier New', Courier, monospace;
@@ -208,6 +213,84 @@ img{
 .person1:hover .person1-info {
     opacity: 1;
 }
+
+/* Новостная страница */
+
+
+/* навигация по категориям */
+
+.filter_by_category {
+    margin-bottom: 3%;
+    display: flex;
+    justify-content: center
+}
+
+.filter_by_category a {
+    margin: 5px;
+    transition: 1s;
+}
+
+.filter_by_category a:hover {
+    background-color: #a58b5b;
+}
+
+.filter {
+    margin: 10px;
+    font-size: 20px;
+}
+
+.filter img {
+    width: auto;
+    height: auto;
+}
+/* конец навигации */
+
+
+/* Фреймы новостей */
+
+.news_frames {
+    display: grid;
+    justify-items: center
+}
+
+.frame {
+    background-color: #191a1f;
+    width: 900px;
+    height: 130px;
+    padding: 10px 0px 10px 15px;
+    margin-bottom: 15px;
+    border: 1px solid #a58b5b;
+    display: flex;
+    align-items: center;
+}
+
+
+.right h1 {
+    margin-top: 15px;
+    font-size: 20px;
+}
+
+.right p {
+    margin: 10px;
+    font-size: 15px;
+}
+
+.right {
+    width: 750px;
+
+}
+
+.left img {
+    width: 190px;
+    height: 100px;
+}
+
+.data p {
+    text-align: right;
+}
+
+
+/* Подвал */
 
 footer {
     background:#191a1f;
