--- a/style.css
+++ b/style.css
@@ -360,6 +360,18 @@ img{
     text-align: right;
 }
 
+/* Видео с вк видео */
+iframe {
+    width: 853px;
+    height: 480px;
+    padding: 20px 20px 20px 20px;
+    border-radius: 30px;
+    border: 1px solid #a58b5b;
+    margin-left: auto;
+    margin-right: auto;
+    display: block
+}
+/* видео */
 
 /* Подвал */
 
@@ -369,4 +381,5 @@ footer {
     text-align: center;
     padding: 30px 0;
     margin-top: 40px;
+
 }
