--- a/style.css
+++ b/style.css
@@ -373,6 +373,67 @@ iframe {
 }
 /* видео */
 
+/* Форум */
+.form_sviz h2 {
+    font-size: 35px;
+    margin-bottom: 10px;
+}
+
+.form_sviz {
+    display: grid;
+    display: grid;
+    justify-items: center;
+}
+
+form {
+    width: 300px;
+    padding: 10px 10px 10px 10px;
+    background-color: #191a1f;
+    border: 2px solid #a58b5b;
+    border-radius: 5%;
+    display: grid;
+    justify-items: center;
+}
+
+label {
+    font-size: 18px;
+    margin-top: 5px;
+}
+
+input {
+    width: 80%;
+    height: 30px;
+    margin-top: 5px;
+    border: 2px solid #a58b5b;
+    border-radius: 4px;
+}
+
+textarea {
+    width: 90%;
+    height: 80px;
+    margin-top: 5px;
+    border: 2px solid #a58b5b;
+    border-radius: 4px;
+}
+
+button {
+    font-weight:700;
+    font-size: 15px;
+    font-family: 'Courier New', Courier, monospace;
+    margin-top: 15px;
+    padding: 10px;
+    background-color: #ffffff;
+    color: #000000;
+    border: none;
+    border-radius: 4px;
+    transition: 1s;
+}
+        
+button:hover {
+    background-color: #a58b5b;
+    color: #ffffff;
+}
+
 /* Подвал */
 
 footer {
